--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,3 +76,12 @@ a:hover {
 .app-container {
   padding: 20px;
 }
+
+.components-container {
+  margin: 30px 50px;
+  position: relative;
+}
+
+.pagination-container {
+  margin-top: 30px;
+}
